--- a/examples/app_vu/Makefile
+++ b/examples/app_vu/Makefile
@@ -1,7 +1,7 @@
 # The TARGET variable determines what target system the application is
 # compiled for. It either refers to an XN file in the source directories
 # or a valid argument for the --target option when compiling
-TARGET = XCORE-200-EXPLORER
+TARGET = MIC-ARRAY-1V0
 
 # The APP_NAME variable determines the name of the final .xe file. It should
 # not include the .xe postfix. If left blank the name will default to
@@ -9,7 +9,7 @@ TARGET = XCORE-200-EXPLORER
 APP_NAME = app_vu
 
 # The USED_MODULES variable lists other module used by the application.
-USED_MODULES = lib_i2c lib_logging lib_mic_array lib_xassert
+USED_MODULES = lib_i2c(>=4.0.0) lib_i2s(>=2.2.0) lib_mic_array(>=3.0.0) lib_mic_array_board_support(>=2.1.0)
 
 # The flags passed to xcc when building the application
 # You can also set the following to override flags for a particular language:
