--- a/lib_mic_array/.cproject
+++ b/lib_mic_array/.cproject
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<?fileVersion 4.0.0?>
-
-<cproject storage_type_id="org.eclipse.cdt.core.XmlProjectDescriptionStorage">
+<?fileVersion 4.0.0?><cproject storage_type_id="org.eclipse.cdt.core.XmlProjectDescriptionStorage">
 	<storageModule moduleId="org.eclipse.cdt.core.settings">
 		<cconfiguration id="com.xmos.cdt.toolchain.128414161">
 			<storageModule buildSystemId="org.eclipse.cdt.managedbuilder.core.configurationDataProvider" id="com.xmos.cdt.toolchain.128414161" moduleId="org.eclipse.cdt.core.settings" name="Default">
@@ -217,6 +215,9 @@
 									<listOptionValue builtIn="false" value="/Users/andrew/sandboxes/moby_dick/Installs/Mac/target/include"/>
 									<listOptionValue builtIn="false" value="/Users/andrew/sandboxes/moby_dick/Installs/Mac/target/include/clang"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_dsp/src/bfp}&quot;"/>
+									<listOptionValue builtIn="false" value="/Users/andrew/sandboxes/test_box/Installs/Mac/target/include/xc"/>
+									<listOptionValue builtIn="false" value="/Users/andrew/sandboxes/test_box/Installs/Mac/target/include"/>
+									<listOptionValue builtIn="false" value="/Users/andrew/sandboxes/test_box/Installs/Mac/target/include/clang"/>
 								</option>
 								<inputType id="com.xmos.cdt.xc.compiler.input.1370880023" name="XC" superClass="com.xmos.cdt.xc.compiler.input"/>
 							</tool>
@@ -555,6 +556,8 @@
 									<listOptionValue builtIn="false" value="/Users/andrew/sandboxes/moby_dick/Installs/Mac/target/include"/>
 									<listOptionValue builtIn="false" value="/Users/andrew/sandboxes/moby_dick/Installs/Mac/target/include/clang"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_dsp/src/bfp}&quot;"/>
+									<listOptionValue builtIn="false" value="/Users/andrew/sandboxes/test_box/Installs/Mac/target/include"/>
+									<listOptionValue builtIn="false" value="/Users/andrew/sandboxes/test_box/Installs/Mac/target/include/clang"/>
 								</option>
 								<inputType id="com.xmos.cdt.c.compiler.input.c.1236095096" name="C" superClass="com.xmos.cdt.c.compiler.input.c"/>
 							</tool>
@@ -903,6 +906,9 @@
 									<listOptionValue builtIn="false" value="/Users/andrew/sandboxes/moby_dick/Installs/Mac/target/include/clang"/>
 									<listOptionValue builtIn="false" value="/Users/andrew/sandboxes/moby_dick/Installs/Mac/target/include/c++/v1"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_dsp/src/bfp}&quot;"/>
+									<listOptionValue builtIn="false" value="/Users/andrew/sandboxes/test_box/Installs/Mac/target/include"/>
+									<listOptionValue builtIn="false" value="/Users/andrew/sandboxes/test_box/Installs/Mac/target/include/clang"/>
+									<listOptionValue builtIn="false" value="/Users/andrew/sandboxes/test_box/Installs/Mac/target/include/c++/v1"/>
 								</option>
 								<inputType id="com.xmos.cdt.cxx.compiler.input.cpp.757073714" name="C++" superClass="com.xmos.cdt.cxx.compiler.input.cpp"/>
 							</tool>
