--- a/tests/test_mic_dual/Makefile
+++ b/tests/test_mic_dual/Makefile
@@ -16,10 +16,8 @@ USED_MODULES = lib_mic_array
 # XCC_XC_FLAGS, XCC_C_FLAGS, XCC_ASM_FLAGS, XCC_CPP_FLAGS
 # If the variable XCC_MAP_FLAGS is set it overrides the flags passed to
 # xcc for the final link (mapping) stage.
-COMMON_FLAGS = -O2 -g -Wno-timing -DTEST_MODE
+XCC_FLAGS = -O2 -g
 
-XCC_FLAGS_CH4 = $(COMMON_FLAGS) -DCHANNELS=4
-XCC_FLAGS_CH8 = $(COMMON_FLAGS) -DCHANNELS=8
 
 # The XCORE_ARM_PROJECT variable, if set to 1, configures this
 # project to create both xCORE and ARM binaries.
@@ -27,6 +25,8 @@ XCORE_ARM_PROJECT = 0
 
 # The VERBOSE variable, if set to 1, enables verbose output from the make system.
 VERBOSE = 0
+
+SOURCE_DIRS = .
 
 XMOS_MAKE_PATH ?= ../..
 -include $(XMOS_MAKE_PATH)/xcommon/module_xcommon/build/Makefile.common
