Get pdm THD/noise test working for lib_mic_array

--- a/tests/test_mic_dual/Makefile
+++ b/tests/test_mic_dual/Makefile
@@ -6,7 +6,7 @@ TARGET = XCORE-200-EXPLORER
 # The APP_NAME variable determines the name of the final .xe file. It should
 # not include the .xe postfix. If left blank the name will default to
 # the project name
-APP_NAME = test_pdm_interface
+APP_NAME = 
 
 # The USED_MODULES variable lists other module used by the application.
 USED_MODULES = lib_mic_array
@@ -26,7 +26,7 @@ XCORE_ARM_PROJECT = 0
 # The VERBOSE variable, if set to 1, enables verbose output from the make system.
 VERBOSE = 0
 
-SOURCE_DIRS = .
+SOURCE_DIRS = src
 
 XMOS_MAKE_PATH ?= ../..
 -include $(XMOS_MAKE_PATH)/xcommon/module_xcommon/build/Makefile.common
