--- a/tests/test_mic_dual_timing/Makefile
+++ b/tests/test_mic_dual_timing/Makefile
@@ -16,7 +16,7 @@ USED_MODULES = lib_mic_array
 # XCC_XC_FLAGS, XCC_C_FLAGS, XCC_ASM_FLAGS, XCC_CPP_FLAGS
 # If the variable XCC_MAP_FLAGS is set it overrides the flags passed to
 # xcc for the final link (mapping) stage.
-XCC_FLAGS = -O2 -g -report
+XCC_FLAGS = -Os -g -report
 
 
 # The XCORE_ARM_PROJECT variable, if set to 1, configures this
