--- a/tests/test_mic_dual_timing/Makefile
+++ b/tests/test_mic_dual_timing/Makefile
@@ -16,8 +16,8 @@ USED_MODULES = lib_mic_array
 # XCC_XC_FLAGS, XCC_C_FLAGS, XCC_ASM_FLAGS, XCC_CPP_FLAGS
 # If the variable XCC_MAP_FLAGS is set it overrides the flags passed to
 # xcc for the final link (mapping) stage.
-XCC_FLAGS = -Os -g -report
-
+XCC_FLAGS_BLOCK_SIZE_240 = -Os -g -report -DMIC_ARRAY_FRAME_SIZE=240 -DN_LOOPS_TO_TEST=1
+XCC_FLAGS_BLOCK_SIZE_1   = -Os -g -report -DMIC_ARRAY_FRAME_SIZE=1 -DN_LOOPS_TO_TEST=100
 
 # The XCORE_ARM_PROJECT variable, if set to 1, configures this
 # project to create both xCORE and ARM binaries.
