--- a/legacy_tests/test_channel_ordering/Makefile
+++ b/legacy_tests/test_channel_ordering/Makefile
@@ -20,7 +20,7 @@ COMMON_FLAGS = -O2 -g -DTEST_MODE
 
 
 # xmake doesn't like 'END' in a config name?
-XCC_FLAGS_backend = $(COMMON_FLAGS) -DBACKEND
+XCC_FLAGS_BACKEND = $(COMMON_FLAGS) -DBACKEND
 XCC_FLAGS_FRONTEND_8BIT_4CH = $(COMMON_FLAGS) -DFRONTEND_8BIT_4CH -DTEST_MODE
 XCC_FLAGS_FRONTEND_8BIT_8CH = $(COMMON_FLAGS) -DFRONTEND_8BIT_8CH -DTEST_MODE
 XCC_FLAGS_FRONTEND_8BIT_4CH_CHANREORDER = $(COMMON_FLAGS) -DFRONTEND_8BIT_4CH -DTEST_MODE -DCHANNEL_REORDER_TEST
