--- a/legacy_tests/test_mic_dual_timing/Makefile
+++ b/legacy_tests/test_mic_dual_timing/Makefile
@@ -16,14 +16,16 @@ USED_MODULES = lib_mic_array
 # XCC_XC_FLAGS, XCC_C_FLAGS, XCC_ASM_FLAGS, XCC_CPP_FLAGS
 # If the variable XCC_MAP_FLAGS is set it overrides the flags passed to
 # xcc for the final link (mapping) stage.
-XCC_FLAGS_BLOCK_SIZE_240 = -Os -g -report -DMIC_ARRAY_FRAME_SIZE=240 -DN_LOOPS_TO_TEST=1
-XCC_FLAGS_BLOCK_SIZE_1   = -Os -g -report -DMIC_ARRAY_FRAME_SIZE=1 -DN_LOOPS_TO_TEST=100
+XCC_FLAGS_BLOCK_SIZE_240 = -Os -g -report -DMIC_DUAL_FRAME_SIZE=240 -DN_LOOPS_TO_TEST=1
+XCC_FLAGS_BLOCK_SIZE_1   = -Os -g -report -DMIC_DUAL_FRAME_SIZE=1 -DN_LOOPS_TO_TEST=100
 
 # The XCORE_ARM_PROJECT variable, if set to 1, configures this
 # project to create both xCORE and ARM binaries.
 XCORE_ARM_PROJECT = 0
 
 SOURCE_DIRS = src
+
+INCLUDE_DIRS = src
 
 XMOS_MAKE_PATH ?= ../..
 -include $(XMOS_MAKE_PATH)/xcommon/module_xcommon/build/Makefile.common
