--- a/Pipfile
+++ b/Pipfile
@@ -7,5 +7,5 @@ verify_ssl = true
 flake8 = "*"
 
 [packages]
-pytest = "~=6.0.0"
-pytest-xdist = "~=1.34.0"
+pytest = "==6.0.0"
+pytest-xdist = "==1.34.0"
