--- a/requirements.txt
+++ b/requirements.txt
@@ -17,8 +17,14 @@
 # pip-install this one as editable using this repository's setup.py file.  The
 # same modules should appear in the setup.py list as given below.
 flake8==3.8.3
+matplotlib==3.3.1
+numpy==1.19.1
+pylint==2.5.3
 pytest==6.0.0
 pytest-xdist==1.34.0
+
+# Pin scipy to 1.4.1 due to tensorflow v2.1.1 hard pinning it to that version.
+scipy==1.4.1
 
 # Development dependencies
 #
