--- a/requirements.txt
+++ b/requirements.txt
@@ -18,13 +18,14 @@
 # same modules should appear in the setup.py list as given below.
 flake8==3.8.3
 matplotlib==3.3.1
-numpy==1.19.1
+numpy==1.18.5
 pylint==2.5.3
 pytest==6.0.0
 pytest-xdist==1.34.0
 
 # Pin scipy to 1.4.1 due to tensorflow v2.1.1 hard pinning it to that version.
 scipy==1.4.1
+soundfile==0.10.3.post1
 
 # Development dependencies
 #
