Got some of it working.
Still don't have any coefficients, and still haven't tested it with audio output, so it's still entirely possible that I'm doing some bookkeeping incorrectly and am clobbering samples or something

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -57,6 +57,7 @@ list( APPEND  APP_SOURCES  ${SOURCES_C}
 target_sources(${APP_NAME} 
   PRIVATE ${MIC_ARRAY_SOURCES}
   PRIVATE ${APP_SOURCES}
+  PRIVATE ${LIB_XS3_MATH_SOURCES}
 )
 
 set_source_files_properties( ${SOURCES_XC}  PROPERTIES LANGUAGE C ) 
@@ -64,6 +65,7 @@ set_source_files_properties( ${SOURCES_XC}  PROPERTIES LANGUAGE C )
 target_include_directories(${APP_NAME}
   PRIVATE ${MIC_ARRAY_INCLUDES}
   PRIVATE ${APP_INCLUDES}
+  PRIVATE ${LIB_XS3_MATH_INCLUDES}
 )
 
 
