Removed original 'test' app and renamed 'test2' to 'demo'.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -48,8 +48,7 @@ include("$ENV{XCORE_SDK_PATH}/modules/hil/hil.cmake")
 # Apps
 #**********************
 
-add_subdirectory( test  )
-add_subdirectory( test2 )
+add_subdirectory( demo )
 
 #**********************
 # Helper Targets
