Finished refactoring and initial API documentation.

--- a/demos/demo_basic/CMakeLists.txt
+++ b/demos/demo_basic/CMakeLists.txt
@@ -1,5 +1,5 @@
 
-set(APP_NAME demo_simple)
+set(APP_NAME demo_basic)
 
 #********************************
 # Gather lib sources
@@ -11,7 +11,7 @@ include("${CMAKE_SOURCE_DIR}/lib_mic_array/lib_mic_array.cmake")
 #**********************
 
 set(EXTRA_BUILD_FLAGS
-  "-DMIC_ARRAY_SIMPLE_API_ENABLE=1"
+  "-DMIC_ARRAY_BASIC_API_ENABLE=1"
   "-DMIC_ARRAY_CONFIG_MCLK_FREQ=24576000"
   "-DMIC_ARRAY_CONFIG_PDM_FREQ=3072000"
   "-DMIC_ARRAY_CONFIG_SAMPLES_PER_FRAME=16"
