More refinements and simplifications.
The vanilla API now uses the port definitions from the XN file to automatically gather the port and clock resources.
Cleaned up the headers by using macros for all the 'extern C' stuff.
Scaled back the frame_transfer.h stuff. Decided it was too complicated for right now.
Added CMake macro for adding the vanilla API to an application.
Restructured CMake project so that lib_mic_array has its own CMakeLists.txt, instead of lib_mic_array.cmake which was being included by apps.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,16 +19,11 @@ string(REPLACE "-MD" "-MMD" CMAKE_DEPFILE_FLAGS_C ${CMAKE_DEPFILE_FLAGS_C})
 
 add_subdirectory(xcore_sdk EXCLUDE_FROM_ALL EXCLUDE_FROM_DEFAULT_BUILD)
 
+add_subdirectory(lib_mic_array)
 
 set(CMAKE_INSTALL_PREFIX ${CMAKE_BINARY_DIR})
 
-
-#**********************
-# Options
-#**********************
-
-include(demos/etc/demo_app.cmake)
-include(demos/common/demo_common.cmake)
+include( etc/vanilla/vanilla.cmake )
 
 #**********************
 # Apps
