--- a/demos/demo_vanilla/CMakeLists.txt
+++ b/demos/demo_vanilla/CMakeLists.txt
@@ -1,20 +1,13 @@
 
 set(APP_NAME demo_vanilla)
 
-#********************************
-# Gather lib sources
-#********************************
-include("${CMAKE_SOURCE_DIR}/lib_mic_array/lib_mic_array.cmake")
-
 #**********************
-# Build flags
+# Vanilla Configuration
 #**********************
 
-set(EXTRA_BUILD_FLAGS
-  "-DMIC_ARRAY_CONFIG_MCLK_FREQ=24576000"
-  "-DMIC_ARRAY_CONFIG_PDM_FREQ=3072000"
-  "-DMIC_ARRAY_CONFIG_SAMPLES_PER_FRAME=16"
-)
+set( MCLK_FREQ            24576000  )
+set( PDM_FREQ             3072000   )
+set( SAMPLES_PER_FRAME    16        )
 
 
 #**********************
@@ -22,8 +15,7 @@ set(EXTRA_BUILD_FLAGS
 #**********************
 
 set( APP_INCLUDES  "src" )
-list( APPEND  APP_INCLUDES ${MIC_ARRAY_INCLUDES} ${DEMO_COMMON_INCLUDES} )
-list( APPEND  APP_INCLUDES "${CMAKE_SOURCE_DIR}/etc/vanilla" )
+list( APPEND  APP_INCLUDES ${DEMO_COMMON_INCLUDES} )
 
 #**********************
 # sources
@@ -31,8 +23,7 @@ list( APPEND  APP_INCLUDES "${CMAKE_SOURCE_DIR}/etc/vanilla" )
 
 file( GLOB_RECURSE APP_SOURCES "src/*.c" "src/*.xc" "src/*.cpp" "src/*.S"   )
 
-list( APPEND  APP_SOURCES  ${MIC_ARRAY_SOURCES} ${DEMO_COMMON_SOURCES} )
-list( APPEND  APP_SOURCES  "${CMAKE_SOURCE_DIR}/etc/vanilla/mic_array_vanilla.cpp" )
+list( APPEND  APP_SOURCES  ${DEMO_COMMON_SOURCES} )
 
 #**********************
 # create targets
@@ -42,10 +33,10 @@ foreach( N_MICS  1 2 )
 
   set( TARG_NAME "${APP_NAME}_${N_MICS}mic" )
 
-  set(TARG_FLAGS ${EXTRA_BUILD_FLAGS})
-  list( APPEND TARG_FLAGS "-DMIC_ARRAY_CONFIG_MIC_COUNT=${N_MICS}" )
+  make_demo_app_target( ${TARG_NAME} "${APP_SOURCES}" "${APP_INCLUDES}" "" )
 
-  make_demo_app_target( ${TARG_NAME} "${APP_SOURCES}" "${APP_INCLUDES}" "${TARG_FLAGS}" )
+  mic_array_vanilla_add( ${TARG_NAME} ${MCLK_FREQ} ${PDM_FREQ} 
+                         ${N_MICS} ${SAMPLES_PER_FRAME} )
 
 endforeach()
 
