--- a/demos/measure_mips/CMakeLists.txt
+++ b/demos/measure_mips/CMakeLists.txt
@@ -1,24 +1,20 @@
 
 set(APP_NAME measure_mips)
 
-#********************************
-# Gather lib sources
-#********************************
-include("${CMAKE_SOURCE_DIR}/lib_mic_array/lib_mic_array.cmake")
 
 #**********************
 # includes
 #**********************
 
 set( APP_INCLUDES  "src" )
-list( APPEND  APP_INCLUDES ${MIC_ARRAY_INCLUDES} ${DEMO_COMMON_INCLUDES} )
+list( APPEND  APP_INCLUDES ${DEMO_COMMON_INCLUDES} )
 
 #**********************
 # sources
 #**********************
 
 file( GLOB_RECURSE APP_SOURCES "src/*.c" "src/*.xc" "src/*.cpp" "src/*.S"   )
-list( APPEND  APP_SOURCES  ${MIC_ARRAY_SOURCES} ${DEMO_COMMON_SOURCES} )
+list( APPEND  APP_SOURCES  ${DEMO_COMMON_SOURCES} )
 
 #**********************
 # create targets
