--- a/tests/building/prefab/CMakeLists.txt
+++ b/tests/building/prefab/CMakeLists.txt
@@ -38,3 +38,6 @@ PRIVATE ${APP_INCLUDES} )
 target_link_libraries( ${APP_NAME}
   xcore_sdk_lib_xs3_math
   xcore_sdk_lib_mic_array )
+
+  
+add_dependencies( tests-build tests-build-prefab )
