--- a/demos/CMakeLists.txt
+++ b/demos/CMakeLists.txt
@@ -3,5 +3,6 @@ include(demo_app.cmake)
 include(common/demo_common.cmake)
 
 add_subdirectory( demo )
+add_subdirectory( demo_xvf3600 )
 add_subdirectory( demo_vanilla )
 add_subdirectory( measure_mips )
