--- a/tests/building/CMakeLists.txt
+++ b/tests/building/CMakeLists.txt
@@ -1,11 +1,9 @@
 
+add_custom_target( tests-build )
 
 add_subdirectory( prefab  )
 add_subdirectory( vanilla )
 
-add_custom_target( tests-build )
 
-add_dependencies( tests-build
-    tests-build-vanilla
-    tests-build-prefab
-)
+
+add_dependencies( tests tests-build )
