--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,5 @@
 cmake_minimum_required(VERSION 3.14)
 
-# enable_language(CXX C ASM)
-
 #**********************
 # Project
 #**********************
@@ -15,14 +13,17 @@ project(lib_mic_array
     VERSION 5.0.0
     LANGUAGES CXX C ASM)
 
+# Fixes issue where .xc files always recompile on Windows
 string(REPLACE "-MD" "-MMD" CMAKE_DEPFILE_FLAGS_C ${CMAKE_DEPFILE_FLAGS_C})
 
+# Add SDK
 add_subdirectory(xcore_sdk EXCLUDE_FROM_ALL EXCLUDE_FROM_DEFAULT_BUILD)
 
+# Add lib_mic_array
 add_subdirectory(lib_mic_array)
-
 set(CMAKE_INSTALL_PREFIX ${CMAKE_BINARY_DIR})
 
+# Make vanilla API macro available
 include( etc/vanilla/vanilla.cmake )
 
 #**********************
