Updates CMakeListss to match other libraries in SDK

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,17 @@ if("${CMAKE_SOURCE_DIR}" STREQUAL "${CMAKE_BINARY_DIR}")
     message(FATAL_ERROR "In-source build is not allowed! Please specify a build folder.\n\tex:cmake -B build")
 endif()
 
+# If DEV_LIB_MIC_ARRAY is not defined, set it to true iff the root 
+# build dir (CMAKE_BINARY_DIR) is a child of the current source dir.
+# This will tell us whether to include the demos and tests.
+if(NOT DEFINED DEV_LIB_MIC_ARRAY)
+  set(DEV_LIB_MIC_ARRAY 0)
+  get_filename_component(BIN_PARENT ${CMAKE_BINARY_DIR} DIRECTORY)
+  if("${CMAKE_CURRENT_SOURCE_DIR}" STREQUAL "${BIN_PARENT}")
+      set(DEV_LIB_MIC_ARRAY 1)
+  endif()
+endif()
+
 project(lib_mic_array 
     VERSION 5.0.0
     LANGUAGES CXX C ASM)
@@ -16,8 +27,8 @@ project(lib_mic_array
 # Fixes issue where .xc files always recompile on Windows
 string(REPLACE "-MD" "-MMD" CMAKE_DEPFILE_FLAGS_C ${CMAKE_DEPFILE_FLAGS_C})
 
-# Add SDK
-add_subdirectory(xcore_sdk EXCLUDE_FROM_ALL EXCLUDE_FROM_DEFAULT_BUILD)
+# # Add SDK
+# add_subdirectory(xcore_sdk EXCLUDE_FROM_ALL EXCLUDE_FROM_DEFAULT_BUILD)
 
 # Add lib_mic_array
 add_subdirectory(lib_mic_array)
@@ -27,10 +38,10 @@ set(CMAKE_INSTALL_PREFIX ${CMAKE_BINARY_DIR})
 include( etc/vanilla/vanilla.cmake )
 
 #**********************
-# Apps
+# Demos/Tests
 #**********************
 
-if(PROJECT_IS_TOP_LEVEL)
+if(${DEV_LIB_MIC_ARRAY})
   add_subdirectory( demos )
   add_subdirectory( tests )
 endif()
