--- a/tests/signal/TwoStageDecimator/CMakeLists.txt
+++ b/tests/signal/TwoStageDecimator/CMakeLists.txt
@@ -53,7 +53,7 @@ macro( create_target    MICS    S2DEC    S2TAPS )
 
   target_link_libraries( ${TARG_NAME}
     xcore_sdk_lib_xs3_math
-    sdk::hil::lib_mic_array )
+    lib_mic_array )
 
   target_compile_definitions( ${TARG_NAME}
     PRIVATE "CHAN_COUNT=${MICS}"
