--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,52 +1,53 @@
 cmake_minimum_required(VERSION 3.14)
 
-#**********************
-# Project
-#**********************
 
-# Disable in-source build.
-if("${CMAKE_SOURCE_DIR}" STREQUAL "${CMAKE_BINARY_DIR}")
-    message(FATAL_ERROR "In-source build is not allowed! Please specify a build folder.\n\tex:cmake -B build")
-endif()
+if(${CMAKE_SYSTEM_NAME} STREQUAL XCORE_XS3A)
 
-# If DEV_LIB_MIC_ARRAY is not defined, set it to true iff the root 
-# build dir (CMAKE_BINARY_DIR) is a child of the current source dir.
-# This will tell us whether to include the demos and tests.
-if(NOT DEFINED DEV_LIB_MIC_ARRAY)
-  set(DEV_LIB_MIC_ARRAY 0)
-  get_filename_component(BIN_PARENT ${CMAKE_BINARY_DIR} DIRECTORY)
-  if("${CMAKE_CURRENT_SOURCE_DIR}" STREQUAL "${BIN_PARENT}")
-      set(DEV_LIB_MIC_ARRAY 1)
+  # Disable in-source build.
+  if("${CMAKE_SOURCE_DIR}" STREQUAL "${CMAKE_BINARY_DIR}")
+      message(FATAL_ERROR "In-source build is not allowed! Please specify a build folder.\n\tex:cmake -B build")
   endif()
-endif()
 
-project(lib_mic_array 
-    VERSION 5.0.0
-    LANGUAGES CXX C ASM)
+  # If DEV_LIB_MIC_ARRAY is not defined, set it to true iff the root 
+  # build dir (CMAKE_BINARY_DIR) is a child of the current source dir.
+  # This will tell us whether to include the demos and tests.
+  if(NOT DEFINED DEV_LIB_MIC_ARRAY)
+    set(DEV_LIB_MIC_ARRAY 0)
+    get_filename_component(BIN_PARENT ${CMAKE_BINARY_DIR} DIRECTORY)
+    if("${CMAKE_CURRENT_SOURCE_DIR}" STREQUAL "${BIN_PARENT}")
+        set(DEV_LIB_MIC_ARRAY 1)
+    endif()
+  endif()
 
-if( PROJECT_IS_TOP_LEVEL )
-  # Fixes issue where .xc files always recompile on Windows
-  string(REPLACE "-MD" "-MMD" CMAKE_DEPFILE_FLAGS_C ${CMAKE_DEPFILE_FLAGS_C})
-endif()
+  project(lib_mic_array 
+      VERSION 5.0.0
+      LANGUAGES CXX C ASM)
 
-# # Add SDK
-# add_subdirectory(xcore_sdk EXCLUDE_FROM_ALL EXCLUDE_FROM_DEFAULT_BUILD)
+  if( PROJECT_IS_TOP_LEVEL )
+    # Fixes issue where .xc files always recompile on Windows
+    string(REPLACE "-MD" "-MMD" CMAKE_DEPFILE_FLAGS_C ${CMAKE_DEPFILE_FLAGS_C})
+  endif()
 
-# Add lib_mic_array
-add_subdirectory(lib_mic_array)
+  # # Add SDK
+  # add_subdirectory(xcore_sdk EXCLUDE_FROM_ALL EXCLUDE_FROM_DEFAULT_BUILD)
 
-if( PROJECT_IS_TOP_LEVEL )
-  set(CMAKE_INSTALL_PREFIX ${CMAKE_BINARY_DIR})
-endif()
+  # Add lib_mic_array
+  add_subdirectory(lib_mic_array)
 
-# Make vanilla API macro available
-include( etc/vanilla/vanilla.cmake )
+  if( PROJECT_IS_TOP_LEVEL )
+    set(CMAKE_INSTALL_PREFIX ${CMAKE_BINARY_DIR})
+  endif()
 
-#**********************
-# Demos/Tests
-#**********************
+  # Make vanilla API macro available
+  include( etc/vanilla/vanilla.cmake )
 
-if(${DEV_LIB_MIC_ARRAY})
-  add_subdirectory( demos )
-  add_subdirectory( tests )
+  #**********************
+  # Demos/Tests
+  #**********************
+
+  if(${DEV_LIB_MIC_ARRAY})
+    add_subdirectory( demos )
+    add_subdirectory( tests )
+  endif()
+
 endif()
