--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -43,6 +43,6 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: lib_mic_array_docs
-          path: ./lib_mic_array/doc/_build/latest/html
+          path: ./doc/_build/latest/html
           if-no-files-found: error # 'warn' or 'ignore' are also available, defaults to `warn` 
           retention-days: 5
