Changes lib_mic_array to use CPM for dependencies.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,9 @@ if("${CMAKE_SOURCE_DIR}" STREQUAL "${CMAKE_BINARY_DIR}")
     message(FATAL_ERROR "In-source build is not allowed! Please specify a build folder.\n\tex:cmake -B build")
 endif()
 
+
+include(cmake/CPM.cmake)
+
 # If DEV_LIB_MIC_ARRAY is not defined, set it to true iff the root 
 # build dir (CMAKE_BINARY_DIR) is a child of the current source dir.
 # This will tell us whether to include the demos and tests.
