--- a/lib_mic_array/CMakeLists.txt
+++ b/lib_mic_array/CMakeLists.txt
@@ -1,4 +1,12 @@
 
+
+CPMAddPackage(
+  NAME lib_xs3_math
+  GIT_REPOSITORY https://github.com/xmos/lib_xs3_math
+  GIT_TAG        881cf848a5899f4ecb9182e7f50fd3705e5b68ef
+)
+
+
 set(MIC_ARRAY_PATH ${CMAKE_CURRENT_LIST_DIR})
 
 ## Source files
@@ -50,5 +58,5 @@ target_compile_options(lib_mic_array
 
 target_link_libraries(lib_mic_array
     PUBLIC
-        xcore_sdk_lib_xs3_math
+        lib_xs3_math
 )
