--- a/tests/signal/TwoStageDecimator/CMakeLists.txt
+++ b/tests/signal/TwoStageDecimator/CMakeLists.txt
@@ -52,7 +52,7 @@ macro( create_target    MICS    S2DEC    S2TAPS )
   PRIVATE ${APP_INCLUDES} )
 
   target_link_libraries( ${TARG_NAME}
-    xcore_sdk_lib_xs3_math
+    lib_xs3_math
     lib_mic_array )
 
   target_compile_definitions( ${TARG_NAME}
