Updates lib_mic_array to use v2.0.2 of lib_xcore_math.

--- a/tests/signal/BasicMicArray/CMakeLists.txt
+++ b/tests/signal/BasicMicArray/CMakeLists.txt
@@ -49,7 +49,7 @@ macro( create_target    MICS    FRAME_SIZE    USE_ISR )
   PRIVATE ${APP_INCLUDES} )
 
   target_link_libraries( ${TARG_NAME}
-    lib_xs3_math
+    lib_xcore_math
     lib_mic_array )
 
   target_compile_definitions( ${TARG_NAME}
