[issue #173] Adds legacy_build_vanilla app and support for 'vanilla' API when using xmake.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -19,3 +19,4 @@ add_subdirectory( building )
 add_subdirectory( unit )
 add_subdirectory( signal )
 add_subdirectory( legacy )
+add_subdirectory( legacy_vanilla )
