--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,13 +6,20 @@ if("${CMAKE_SOURCE_DIR}" STREQUAL "${CMAKE_BINARY_DIR}")
     message(FATAL_ERROR "In-source build is not allowed! Please specify a build folder.\n\tex:cmake -B build")
 endif()
 
-
 include(cmake/CPM.cmake)
 
 # if( PROJECT_IS_TOP_LEVEL )
 #   message(STATUS "Configuring as top-level project")
 #   set( DEV_LIB_MIC_ARRAY 1 )
 # endif()
+
+if( PROJECT_IS_TOP_LEVEL )
+  CPMAddPackage(
+    NAME lib_xcore_math
+    GIT_REPOSITORY https://github.com/xmos/lib_xcore_math
+    GIT_TAG        v2.1.0
+  )
+endif()
 
 # If DEV_LIB_MIC_ARRAY is not defined, set it to true iff the root 
 # build dir (CMAKE_BINARY_DIR) is a child of the current source dir.
