--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,6 +23,9 @@ on:
 
   # Allow manually triggering of the workflow.
   workflow_dispatch: {}
+  
+env:
+  XCORE_APP_BUILDER: 'ghcr.io/xmos/xcore_builder:pr-1'
 
 jobs:
   build_tests_xcore:
@@ -36,19 +39,9 @@ jobs:
 
       - name: Pull builder container
         run: |
-          docker pull ghcr.io/xmos/sdk_app_builder:develop 
-
-      - name: Install Python
-        uses: actions/setup-python@v2
-        with:
-          python-version: '3.8'
-
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install numpy
+          docker pull ${XCORE_APP_BUILDER}
 
       - name: Build
         run: |
-          docker run --rm -w /lib_mic_array -v ${{ github.workspace }}:/lib_mic_array ghcr.io/xmos/sdk_app_builder:develop bash -l .github/scripts/build_test_apps.sh
+          docker run --rm -w /lib_mic_array -v ${{ github.workspace }}:/lib_mic_array ${XCORE_APP_BUILDER} bash -l .github/scripts/build_test_apps.sh
 
