pinned doc builder to v2

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -34,7 +34,7 @@ jobs:
       
       - name: Pull doc_builder container
         run: |
-          docker pull ghcr.io/xmos/doc_builder:main 
+          docker pull ghcr.io/xmos/doc_builder:v2.0.0
       
       - name: Build documentation
         run: |
