--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,6 +47,8 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install numpy
+          pip install scipy
+          pip install matplotlib
 
       - name: Build
         run: |
