--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -43,7 +43,7 @@ jobs:
       - name: Save HTML documentation artifact
         uses: actions/upload-artifact@v2
         with:
-          name: lib_mic_array_docs
+          name: lib_mic_array_docs_html
           path: ./doc/_build/html
           if-no-files-found: error # 'warn' or 'ignore' are also available, defaults to `warn` 
           retention-days: 5
@@ -51,7 +51,7 @@ jobs:
       - name: Save PDF documentation artifact
         uses: actions/upload-artifact@v2
         with:
-          name: lib_xcore_math_docs_pdf
+          name: lib_mic_array_docs_pdf
           path: ./doc/_build/pdf/programming_guide.pdf
           if-no-files-found: error # 'warn' or 'ignore' are also available, defaults to `warn` 
           retention-days: 5
